internal/xds/translator/testdata/out/extension-xds-ir/http-route-extension-route-error.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: extension-post-xdsroute-hook-error
      route:
        cluster: extension-post-xdsroute-hook-error-dest
        upgradeConfigs:
        - upgradeType: websocket
